Estudando codigo javascript com o firebase, banco de dados nao relacional. O codigo permite fazer login e cadastro

--- a/firebaseAuth/web/bdIII.html
+++ b/firebaseAuth/web/bdIII.html
@@ -17,10 +17,10 @@
     <span>User:</span><br><br>
     <input type="text" name="" id="email" placeholder="E-mail..."><br><br>
     <span>Password:</span><br><br>
-    <input type="text" name="" id="password" placeholder="Password...">
+    <input type="password" name="" id="password" placeholder="Password...">
     <br>
     <p>User sing in: <span id="userSingIn">?</span></p>
     <button type="button" onclick='singInUser()' id="btnLogar">Logar</button>
-    <button type="button" onclick='createUser()' id="btnCad">Cadastrar</button>
+    <button type="button" onclick='createUser()' id="btnCadastro">Cadastrar</button>
 </body>   
 </html>
